Improve the layout of some dialogs